--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "author": "jeromebienaime <jerome.bienaime@bulle-communication.com>",
   "license": "MIT",
   "scripts": {
-    "start": "./node_modules/.bin/parcel src/index.html",
-    "serve:gitpod": "./node_modules/.bin/parcel parcel src/index.html --host=0.0.0.0"
+    "start": "./node_modules/.bin/parcel src/index.html --open --no-cache"
   },
   "dependencies": {
-    "redux": "^4.0.5",
+    "parcel": "^1.12.4",
+    "react": "^16.8.3",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
     "redux-logger": "^3.0.6"
   }
 }
