--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
   "author": "jeromebienaime <jerome.bienaime@bulle-communication.com>",
   "license": "MIT",
   "scripts": {
-    "start": "./node_modules/.bin/parcel src/index.html --open --no-cache"
-  },
-  "dependencies": {
+    "start": "./node_modules/.bin/parcel src/index.html --open --no-cache",
+    "test": "./node_modules/.bin/ava --verbose",
+    "ava": "^3.3.0",
+    "chance": "^1.1.4",
+    "esm": "^3.2.25",
+    "nyc": "^15.0.0",
     "parcel": "^1.12.4",
     "react": "^16.8.3",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "reduce-reducers": "^1.0.4",
     "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
+    "redux-diff-logger": "^0.0.9",
     "redux-logger": "^3.0.6"
+  },
+  "ava": {
+    "require": [
+      "esm"
+    ]
   }
 }
