Updates travis to use yarn cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: false
 language: node_js
 before_install:
-  - npm i -g ava
+  - yarn global add ava
   - yarn add esm
 node_js:
   - "10.18.0"
+cache: yarn
