--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "scripts": {
     "start": "./node_modules/.bin/parcel src/index.html --open --no-cache",
-    "test": "ava --verbose",
+    "test": "./node_modules/.bin/ava --verbose"
+  },
+  "dependencies": {
     "ava": "^3.3.0",
     "chance": "^1.1.4",
     "esm": "^3.2.25",
