--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,12 @@
         "react"
     ],
     "rules": {
-        "indent": ["error", 4]
+        "indent": ["error", 4],
+        "quotes": [2, "double", "avoid-escape"]
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
