--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,3 +2,7 @@ tasks:
   - init: npm install
 image:
   file: .gitpod.Dockerfile
+
+vscode:
+  extensions:
+    - dbaeumer.vscode-eslint@2.0.15:/v3eRFwBI38JLZJv5ExY5g==
