Adds code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ language: node_js
 before_install:
   - yarn global add ava
   - yarn add esm
+  - yarn global add codecov
 node_js:
   - "lts/erbium"
   - "lts/dubnium"
   - "lts/*"
+script:
+  - yarn run report-coverage
+  - codecov
 cache: yarn
