--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "./node_modules/.bin/parcel src/index.html --open --no-cache",
     "test:unit": "./node_modules/.bin/ava --verbose",
     "test:cover": "./node_modules/.bin/nyc ./node_modules/.bin/ava",
+    "test:codecov": "./node_modules/.bin/codecov",
     "lint:js": "./node_modules/.bin/eslint src/ -c ./.eslintrc.json",
     "lint:md": "./node_modules/.bin/remark .",
     "lint": "npm run lint:js & npm run lint:md",
@@ -17,6 +18,7 @@
   "dependencies": {
     "ava": "^3.3.0",
     "chance": "^1.1.4",
+    "codecov": "^3.6.5",
     "esm": "^3.2.25",
     "nyc": "^15.0.0",
     "parcel": "^1.12.4",
