--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "start": "./node_modules/.bin/parcel src/index.html --open --no-cache",
     "test:unit": "./node_modules/.bin/ava --verbose",
     "test:cover": "./node_modules/.bin/nyc ./node_modules/.bin/ava",
+    "test": "yarn test:unit && yarn test:cover",
     "lint:js": "./node_modules/.bin/eslint src/ -c ./.eslintrc.json",
     "lint:md": "./node_modules/.bin/remark .",
-    "lint": "npm run lint:js & npm run lint:md",
+    "lint": "yarn lint:js & yarn lint:md",
     "report-coverage": "./node_modules/.bin/nyc ava --reporter=text-lcov > coverage.lcov && codecov"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "parcel": "^1.12.4",
     "react": "^16.8.3",
     "react-dom": "^16.12.0",
+    "react-interval": "^2.1.1",
     "react-redux": "^7.1.3",
     "reduce-reducers": "^1.0.4",
     "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
