--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ava": "^3.3.0",
     "chance": "^1.1.4",
     "esm": "^3.2.25",
+    "luxon": "^1.22.0",
     "nyc": "^15.0.0",
     "parcel": "^1.12.4",
     "react": "^16.8.3",
