--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:js": "./node_modules/.bin/eslint src/ -c ./.eslintrc.json",
     "lint:md": "./node_modules/.bin/remark .",
     "lint": "yarn lint:js & yarn lint:md",
-    "report-coverage": "./node_modules/.bin/nyc ava --reporter=text-lcov > coverage.lcov && codecov"
+    "check": "yarn lint & yarn test ",
+    "report-coverage": "./node_modules/.bin/nyc ava --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "ava": "^3.3.0",
