--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ yarn.lock
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # stryker mutation reports
-reports/
+# reports/
 
 # Runtime data
 pids
