--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "axios": "^0.19.2",
     "chance": "^1.1.4",
     "esm": "^3.2.25",
+    "jest": "^25.1.0",
     "json-server": "^0.16.0",
     "lod": "^0.1.0",
     "luxon": "^1.22.0",
+    "nock": "^11.8.2",
     "nyc": "^15.0.0",
     "parcel": "^1.12.4",
     "password-generator": "^2.2.3",
@@ -37,6 +39,7 @@
     "react-dom": "^16.12.0",
     "react-interval": "^2.1.1",
     "react-redux": "^7.1.3",
+    "react-scripts": "^3.3.1",
     "reduce-reducers": "^1.0.4",
     "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
     "redux-diff-logger": "^0.0.9",
