--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chance": "^1.1.4",
     "esm": "^3.2.25",
     "jest": "^25.1.0",
+    "jsen": "^0.6.6",
     "json-server": "^0.16.0",
     "lod": "^0.1.0",
     "luxon": "^1.22.0",
