--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "remark-cli": "^7.0.1",
+    "dot-prop": "^5.1.1",
     "remark-preset-lint-recommended": "^3.0.3",
     "snyk": "^1.291.0",
     "stryker-cli": "^1.0.0"
