Updates timer to kill monkeys

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,3 +16,9 @@ vscode:
 vscode:
   extensions:
     - esbenp.prettier-vscode@3.20.0:37/f4uBlE287wUjENFq1aA==
+vscode:
+  extensions:
+    - jprestidge.theme-material-theme@1.0.1:zGtD1SMRLPXU4hZCe09caQ==
+vscode:
+  extensions:
+    - jprestidge.theme-material-theme@1.0.1:zGtD1SMRLPXU4hZCe09caQ==
